# IndicPy

./: .buildinfo  .gitignore  .zenodo.json  IndicPy.html  README.md  genindex.html  index.html  indicpy4health.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: IndicPy.doctree  environment.pickle  index.doctree  indicpy4health.doctree  modules.doctree
.github/workflows/: release.yml  sphinx.yml  test-coverage.yaml
IndicPy/: __init__.py  ruleEngine.py
_sources/: IndicPy.rst.txt  index.rst.txt
_static/: documentation_options.js
docs/: conf.py  index.rst  indicpy4health.rst  modules.rst  requirements.txt
tests/: test_custommatch.py  test_matchall.py  test_matchallwhere.py  test_matchany.py  test_matchanywhere.py
